fix items not centered

--- a/src/styles/components/_component.scss
+++ b/src/styles/components/_component.scss
@@ -59,6 +59,7 @@
             display: flex;
             flex-wrap: nowrap;
             overflow: scroll;
+            align-items: center;
 
             height: 500px;
 
